# escale-sdk

./: AGENTS.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY_NOTICES.md
crates/: cli.md  core.md  image.md  pack.md  validate.md
crates/epc-cli/: Cargo.toml
crates/epc-cli/src/: main.rs
crates/epc-core/: Cargo.toml
crates/epc-core/src/: lib.rs
crates/epc-image/: Cargo.toml  build.rs
crates/epc-image/src/: lib.rs
crates/epc-pack/: Cargo.toml
crates/epc-pack/src/: lib.rs
crates/epc-validate/: Cargo.toml
crates/epc-validate/src/: lib.rs
testcases/: 007HJY-F9QNETS25C.epc  007JNM-SB8FS01DNZ.epc
testcases/image/: arc-de-triomphe-paris-tn.jxl  arc-de-triomphe-paris.jxl
testcases/images/: 007PBH-23AS7DGFMK.epc  007PBJ-SAY9GED9EH.epc  007PBS-Z0AYFDDZKR.epc  007PCB-ESHXHSJ7T0.epc  007PRQ-H28E1TQHBA.epc  007PRR-KBSR4YVX1G.epc  007PRZ-FHATRWM3BG.epc  007PS1-2J1AJE25K5.epc  007PS1-CT8EGW2FQ0.epc  007PS2-450995FCK3.epc  007PSR-B5P651SR01.epc  007R61-ZQ5SYG031X.epc  escale-3G01G7FZKM.epc  thumbnail-256.jxl
testcases/images/escale-000I78-AX/: manifest.json
testcases/images/escale-000I78-AX/media/: thumbnail.jxl
testcases/images/escale-000I78-AX/proof/: hashes.json  signature.json
testcases/images/escale-000I78-AX/text/: message.md
testcases/images/escale-000I9W-6R/: manifest.json
testcases/images/escale-000I9W-6R/media/: thumbnail.jxl
testcases/images/escale-000I9W-6R/proof/: hashes.json  signature.json
testcases/images/escale-000I9W-6R/text/: message.md
testcases/images/escale-000ILL-W0/: manifest.json
testcases/images/escale-000ILL-W0/proof/: hashes.json  signature.json
testcases/images/escale-000ILL-W0/text/: message.md
testcases/images/escale-000JE2-T6/: manifest.json
testcases/images/escale-000JE2-T6/media/: thumbnail.jxl
testcases/images/escale-000JE2-T6/proof/: hashes.json  signature.json
testcases/images/escale-000JE2-T6/text/: message.md
testcases/images/escale-0011R4-6R/: manifest.json
testcases/images/escale-0011R4-6R/media/: thumbnail.jxl
testcases/images/escale-0011R4-6R/proof/: hashes.json  signature.json
testcases/images/escale-0011R4-6R/text/: message.md
testcases/images/escale-0011T5-MI/: manifest.json
testcases/images/escale-0011T5-MI/media/: thumbnail.jxl
testcases/images/escale-0011T5-MI/proof/: hashes.json  signature.json
testcases/images/escale-0011T5-MI/text/: message.md
testcases/images/escale-00124S-8G/: manifest.json
testcases/images/escale-00124S-8G/media/: thumbnail.jxl
testcases/images/escale-00124S-8G/proof/: hashes.json  signature.json
testcases/images/escale-001251-YC/: manifest.json
testcases/images/escale-001251-YC/media/: thumbnail.jxl
testcases/images/escale-001251-YC/text/: message.md
testcases/images/escale-00126B-O3/: manifest.json
testcases/images/escale-00126B-O3/media/: thumbnail.jxl
testcases/images/escale-00126B-O3/proof/: hashes.json  signature.json
testcases/images/escale-00126Z-NT/: manifest.json
testcases/images/escale-00126Z-NT/proof/: hashes.json  signature.json
testcases/images/escale-00128A-VT/: manifest.json
testcases/images/escale-00128A-VT/media/: thumbnail.jxl
testcases/images/escale-00128A-VT/proof/: hashes.json  signature.json
testcases/images/escale-00129Z-27/: manifest.json
testcases/images/escale-00129Z-27/proof/: hashes.json  signature.json
testcases/images/escale-001399-E1/: manifest.json
testcases/images/escale-001399-E1/media/: thumbnail.jxl
testcases/images/escale-001399-E1/proof/: hashes.json  signature.json
testcases/images/escale-001399-E1/text/: message.md
testcases/pc_0/: manifest.json
testcases/pc_0/proof/: hashes.json  signature.json
testcases/pc_0/text/: message.md
