[workspace]
resolver = "2"
members = [
  "crates/epc-core",
  "crates/epc-image",
  "crates/epc-pack",
  "crates/epc-validate",
  "crates/epc-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.75"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.dependencies]
epc-core = { path = "crates/epc-core" }
epc-image = { path = "crates/epc-image" }
epc-pack = { path = "crates/epc-pack" }
epc-validate = { path = "crates/epc-validate" }
base64 = "0.22"
ed25519-dalek = "2"
jxl-oxide = { version = "0.12", default-features = false }
png = "0.17.16"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
zip = { version = "2", default-features = false, features = ["deflate"] }
