[package]
name = "epc-image"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
jxl-encode-libjxl = ["dep:image", "dep:png"]

[dependencies]
epc-core.workspace = true
jxl.workspace = true
image = { workspace = true, optional = true }
png = { workspace = true, optional = true }
zip.workspace = true

[build-dependencies]
pkg-config.workspace = true
