[package]
name = "epc-pack"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
base64.workspace = true
epc-core.workspace = true
epc-validate.workspace = true
serde_json.workspace = true
sha2.workspace = true
zip.workspace = true
