[package]
name = "epc-validate"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = ["jxl"]
jxl = ["dep:epc-image"]

[dependencies]
base64.workspace = true
ed25519-dalek.workspace = true
epc-core.workspace = true
epc-image = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
zip.workspace = true
